--- a/public/index.html
+++ b/public/index.html
@@ -412,6 +412,12 @@
   const DEV_MODE = location.hash.includes('dev');
   let timeScale = 1;
   let darkMode = false;
+  // Inform parent wrapper of initial theme
+  try {
+    if (window.parent && window.parent !== window) {
+      window.parent.postMessage({ type: 'theme-change', isDarkMode: darkMode }, '*');
+    }
+  } catch(err) { /* ignore */ }
 
   // State variables
   let blocksUsed = 0;
@@ -451,6 +457,13 @@
     darkMode = !darkMode;
     document.body.classList.toggle('dark', darkMode);
     themeToggle.textContent = darkMode ? '☀️' : '🌙';
+
+    // Broadcast theme change to parent wrapper
+    try {
+      if (window.parent && window.parent !== window) {
+        window.parent.postMessage({ type: 'theme-change', isDarkMode: darkMode }, '*');
+      }
+    } catch(err) { /* ignore */ }
   });
 
   // Enable dev mode if #dev in URL
